[package]

name        = "hkdf"
version     = "0.1.0"
authors     = ["Wire Swiss GmbH <support@wire.com>"]
description = "HKDF implementation (RFC 5869)"
homepage    = "https://github.com/wireapp/hkdf"
repository  = "git@github.com:wireapp/hkdf.git"
license     = "GPL-3.0"

[dependencies.sodiumoxide]
version = ">= 0.0.12"
default-features = false

[dev-dependencies]
rustc-serialize = "> 0.3.0"
