[package]

name        = "hkdf"
version     = "0.2.0"
authors     = ["Wire Swiss GmbH <support@wire.com>"]
description = "HKDF implementation (RFC 5869)"
homepage    = "https://github.com/wireapp/hkdf"
repository  = "git@github.com:wireapp/hkdf.git"
license     = "GPL-3.0"

[dependencies.sodiumoxide]
version          = ">= 0.0.14"
default-features = false

[dev-dependencies]
rustc-serialize = "> 0.3.0"
